[gd_scene load_steps=3 format=2]

[ext_resource path="res://screens/login_screen/login_screen.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.847059 )

[node name="CheckButton" type="Button" parent="."]
margin_left = 140.0
margin_top = 143.0
margin_right = 230.0
margin_bottom = 163.0
rect_scale = Vector2( 0.5, 0.5 )
text = "check"

[node name="HTTPRequest" type="HTTPRequest" parent="CheckButton"]

[node name="LabelOfError" type="Label" parent="."]
margin_left = 96.0
margin_top = 120.0
margin_right = 290.0
margin_bottom = 134.0
rect_scale = Vector2( 0.7, 0.7 )
theme = SubResource( 1 )
text = "This login is already taken!"
align = 1

[node name="LabelOfUsername" type="Label" parent="."]
margin_left = 140.0
margin_top = 34.0
margin_right = 208.0
margin_bottom = 48.0
rect_scale = Vector2( 0.7, 0.7 )
theme = SubResource( 1 )
text = "username:"

[node name="LabelOfPassword" type="Label" parent="."]
margin_left = 139.0
margin_top = 71.0
margin_right = 207.0
margin_bottom = 85.0
rect_scale = Vector2( 0.7, 0.7 )
theme = SubResource( 1 )
text = "password:"

[node name="GotoBack" type="Button" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 63.0
margin_bottom = 23.0
rect_scale = Vector2( 0.5, 0.5 )
text = "back"

[node name="Label" type="Label" parent="."]
margin_left = 103.0
margin_top = 6.0
margin_right = 273.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 0 )
rect_scale = Vector2( 0.7, 0.5 )
text = "LOGIN"
align = 1

[node name="PasswordEdit" type="LineEdit" parent="."]
margin_left = 115.0
margin_top = 86.0
margin_right = 313.0
margin_bottom = 114.0
rect_scale = Vector2( 0.5, 0.5 )
secret = true

[node name="UsernameEdit" type="LineEdit" parent="."]
margin_left = 115.0
margin_top = 48.0
margin_right = 315.0
margin_bottom = 72.0
rect_scale = Vector2( 0.5, 0.5 )

[connection signal="pressed" from="CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="request_completed" from="CheckButton/HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="GotoBack" to="." method="_on_GotoBack_pressed"]
